# dria-sdk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yaml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html  node.md  quickstart.md
docs/factory/: clair.md  code_generation.md  complexity_scorer.md  csv_extender.md  evaluate.md  evolve_complexity.md  graph_builder.md  instruction_evolution.md  iterate_code.md  list_extender.md  magpie.md  overview.md  persona.md  quality_evolution.md  search.md  self_instruct.md  semantic_triplet.md  simple.md  subtopic.md  text_classification.md  text_matching.md  text_retrieval.md  validate.md  web_fact_check.md  web_multi_choice.md  web_search.md
docs/how-to/: batches.md  functions.md  models.md  pipelines.md  singletons.md  tasks.md  workflows.md
dria/: __init__.py  client.py  config.py  constants.py  design.md  manager.py
dria/batches/: __init__.py  batches.py  prompts.py  singletons.py  workflows.py
dria/client/: __init__.py  client.py  monitor.py
dria/datasets/: __init__.py  base.py  generator.py  prompter.py  utils.py
dria/db/: database.py  mq.py  storage.py
dria/executor/: __init__.py  batch.py  ping.py  task.py  utils.py
dria/factory/: __init__.py  config.py  template.py
dria/factory/csv_extender/: __init__.py  pipeline.py
dria/factory/dialogue/: __init__.py  pipeline.py  task.py
dria/factory/list_extender/: __init__.py  pipeline.py
dria/factory/nemotron_qa/: __init__.py  pipeline.py
dria/factory/omnieval/: __init__.py
dria/factory/persona/: __init__.py  pipeline.py  utils.py
dria/factory/qa_pipeline/: __init__.py  pipeline.py  utils.py
dria/factory/question_answer/: __init__.py
dria/factory/safe/: __init__.py  pipeline.py
dria/factory/search/: __init__.py  pipeline.py
dria/factory/subtopic/: __init__.py  pipeline.py  task.py
dria/models/: __init__.py  enums.py  exceptions.py  models.py  task.py
dria/pipelines/: __init__.py  builder.py  callbacks.py  config.py  pipeline.py  step.py
dria/request/: __init__.py  rest.py
dria/utilities/: __init__.py  helper.py
dria/utils/: __init__.py  ec.py  logging.py  logging_config.py  messaging.py  node_evaluations.py  node_selection.py  schema_parser.py  task_utils.py
dria/workflow/: __init__.py  template.py
dria/workflows/: __init__.py
examples/: custom_workflow.py  multihop_custom_workflow.py  pipeline.py  poem_generator.py
examples/datasets/: dataset_test.py  dataset_test3.py  dataset_test4.py  dataset_test5.py  dataset_test6.py  dataset_test7.py  dataset_test8.py
examples/nvidias_preference_data_pipeline/: run.py
examples/rag_evaluation/: .env.example  chunker.py  evaluator.py  rag.py  rag_evaluation.py  requirements.txt  run.py  utils.py
examples/workflow/: poem_generator.py
examples/workflows/: clair.py  code_generator.py  code_iterator.py  evaluate_prediction.py  evolve_instruction.py  evolve_quality.py  graph_builder.py  instruction_backtranslation.py  magpie.py  multihop_qa.py  self_instruct.py  validate_prediction.py
tests/: conftest.py  dataset_test.py  dataset_test2.py  dataset_test3.py  dataset_test4.py  dataset_test5.py  dataset_test6.py  dataset_test7.py  test_main.py  test_workflows.py
tests/unit/: test_datasets.py  test_duckdb.py  test_http_requests.py  test_kv.py  test_monitoring.py  test_mq.py
tests/workflows/: clair.py  code_generator.py  evaluate_prediction.py  evolve_instruction.py  evolve_quality.py  graph_builder.py  instruction_backtranslation.py  magpie.py  multihop_qa.py  self_instruct.py  validate_prediction.py
(+260 files in other folders)
