[tool.poetry]
name = "dria-sdk"
version = "0.1.0"
description = "Dria SDK"
authors = ["Omer <omer@firstbatch.xyz>", "Anil <anil@firstbatch.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coincurve = "^18.0.0"
requests = "2.28.2"
pydantic = "2.9.1"
python-dotenv = "^1.0.1"
dria-workflows = "^0.1.6"
httpx = "^0.27.2"
eciespy = "0.4.1"
fastbloom-rs = "0.5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
