[tool.poetry]
name = "dria"
version = "0.0.118"
description = "Dria SDK - A Python library for interacting with the Dria Network"
authors = ["andthattoo <omer@firstbatch.xyz>", "Anil <anil@firstbatch.xyz>"]
readme = "README.md"
homepage = "https://github.com/firstbatchxyz/dria-sdk"
repository = "https://github.com/firstbatchxyz/dria-sdk"
documentation = "https://docs.dria.co"
keywords = ["dria", "decentralized-ai", "ai", "agentic"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
coincurve = "^18.0.0"
pydantic = "2.9.1"
python-dotenv = "^1.0.1"
dria-workflows = "^0.3.5"
aiohttp = "^3.11.10"
eciespy = "0.4.1"
fastbloom-rs = "0.5.9"
tqdm = "4.66.5"
json-repair = "0.30.0"
outlines-core = "0.1.26"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
numpy = "^2.1.3"
requests = "^2.32.3"
duckdb = "^1.1.3"
pandas = "^2.2.3"
datasets = "^3.1.0"
huggingface-hub = "^0.28.1"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/firstbatchxyz/dria-sdk/issues"

[tool.poetry.group.diversity.dependencies]
sentence-transformers = {version = "^3.3.1", optional = true}
vendi-score = {version = "^0.0.3", optional = true}
numpy = {version = "^2.1.3", optional = true}


[tool.poetry.group.safe.dependencies]
rank-bm25 = {version = "^0.2.2", optional = true}
numpy = {version = "^2.1.3", optional = true}
nltk = {version = "^3.9.1", optional = true}


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
bandit = "^1.7.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
